@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-30T16:17:27Z",
-  "count_outdated" : 367,
-  "uniques_outdated" : 198,
-  "count" : 389,
+  "timestamp" : "2022-07-01T01:09:27Z",
+  "count_outdated" : 369,
+  "uniques_outdated" : 199,
+  "count" : 390,
   "uniques" : 212,
   "clones" : [
-    {
-      "timestamp": "2022-06-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-17T00:00:00Z",
       "count": 1,
